# knom

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml  setup.cfg  test.n3
confusing/: bnode-statement-false.n3  var-statement-true.n3
examples/: socrates.n3  superman.n3
knom/: __init__.py  stratified.py  typing.py  util.py
knom/builtins/: __init__.py  log.py  math.py  string.py  util.py
knom/util/: __init__.py  viz.py
tests/: __init__.py  recursive-rules-manifests.n3  test.py  test_assign.py  test_bind.py  test_bind_node.py  test_builtins.py  test_calculate_clause_dependencies.py  test_clause_dependencies.py  test_depends.py  test_firing_rules.py  test_get_all_clauses.py  test_head_depends_on_body.py  test_main.py  test_mask.py  test_match_head.py  test_match_rule.py  test_naive_fixpoint.py  test_negative_rules.py  test_node_depends.py  test_node_matches.py  test_positive_rules.py  test_recursive_rules.py  test_scoping.py  test_single_pass.py  test_stratify_rules.py  test_triggering_rules.py  tests_match.py
tests/n3/: builtins-manifests.n3  negative-manifests.n3  positive-non-recursive-rules-manifests.n3  recursive-manifests.n3  scoping-manifests.n3  single-pass-manifests.n3  stratification-manifests.n3
tests/n3/builtins/: log-forallin-current-doc-false.n3  log-forallin-current-doc-ref.n3  log-forallin-current-doc.n3  log-forallin-scoped-false.n3  log-forallin-scoped-ref.n3  log-forallin-scoped.n3  log-includes-current-doc-multiple-vars-ref.n3  log-includes-current-doc-multiple-vars.n3  log-includes-current-doc-ref.n3  log-includes-current-doc.n3  log-includes-formula-ref.n3  log-includes-formula.n3  math_greaterthan_false.n3  math_greaterthan_true.n3  math_lessthan_false.n3  math_lessthan_true-ref.n3  math_lessthan_true.n3  math_notgreaterthan_false.n3  math_notgreaterthan_true.n3  order.n3  (+9 more)
tools/: draw_rule_dependencies.py  knom  single_pass  stratify.py
(+83 files in other folders)
