[project]
name = "knom"
requires-python = ">=3.10"
[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"
[tool.pytest.ini_options]
filterwarnings = [
  "ignore:pkg_resources is deprecated as an API.:DeprecationWarning", # RDFlib
  "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning" # RDFlib
]
[tool.flake8]
per-file-ignores = "tests: S101"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "S101", # ignore asserts
  # ignore docstrings. TODO: remove and document
  "D100",
  "D103",
  "D104",
  # fix ruff warnings
  "D211", # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
  "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
]
